--- a/maryam-s11/assets/styles/index.css
+++ b/maryam-s11/assets/styles/index.css
@@ -9,6 +9,13 @@ body {
 
 }
 
+.container {
+  width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  /* background-color: #fce57e; */
+}
+
 img {
   display: block;
 }
@@ -17,79 +24,382 @@ img {
   display: flex;
 }
 
+
+
+/* عکس کفش ملی */
+header img {
+  margin: 70px auto;
+}
+
+header .mob-img {
+  display: none;
+}
+
+
+/* عکس مشتری ها */
+#hero .customers {
+  position: relative;
+  /* background-color: aquamarine; */
+}
+
+#hero .customers img {
+  border-radius: 50%;
+  border: 1px grey solid;
+}
+
 .customer1-img1 {
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 0;
   z-index: 3;
 }
 
 .customer1-img2 {
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 15px;
   z-index: 2;
 }
 
 .customer1-img3 {
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 30px;
   z-index: 1;
 }
 
 .customer1-img4 {
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 45px;
   z-index: 0;
 }
 
+#hero .customers .customer-count {
+  margin-right: 80px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%
+}
 
+#hero .customers .customer-txt {
+  margin-right: 2%;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  color: rgba(27, 23, 23, 0.65);
+}
+
+/* توجه به علامت فیل */
+#hero h1 {
+  padding: 0;
+  margin: 10px 0 0;
+  font-family: "Lalezar";
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 64px;
+}
+
+#hero p {
+  padding: 0;
+  margin: 10px 0 0;
+  font-family: "Vazirmatn";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  color: rgba(27, 23, 23, 0.65);
+}
+
+/* دکمه های قسمت هیرو */
+a {
+  font-family: "Vazirmatn";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  border-radius: 35px;
+  padding: 8px 32px;
+  text-decoration: none;
+}
+
+
+#hero .contact-us {
+  display: inline-block;
+  margin-top: 10px;
+  color: rgba(27, 23, 23, 0.65);
+  border: 1px rgba(27, 23, 23, 0.65) solid;
+  background-color: rgba(238, 235, 221, 1);
+
+}
+
+#hero .contact-us:hover {
+  color: rgba(27, 23, 23, 1);
+  border: 1px rgba(27, 23, 23, 1) solid;
+  background-color: rgba(238, 235, 221, 1);
+}
+
+#hero .online-order {
+  display: inline-flex;
+  gap: 10px;
+  margin-top: 10px;
+  color: rgba(238, 235, 221, 1);
+  border: 1px rgba(206, 18, 18, 1) solid;
+  background-color: rgba(206, 18, 18, 1);
+}
+
+#hero .online-order:hover {
+  color: rgba(238, 235, 221, 1);
+  border: 1px rgba(129, 0, 0, 1) solid;
+  background-color: rgba(129, 0, 0, 1);
+}
+
+#hero .online-order img {
+  filter: brightness(0) saturate(100%) invert(87%) sepia(8%) saturate(274%) hue-rotate(352deg) brightness(95%) contrast(90%);
+}
+
+
+/* کشورها */
+#countries p {
+  font-family: "Vazirmatn";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: rgba(27, 23, 23, 1);
+}
+
+#countries ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  justify-content: center;
+  /* background-color: darkred; */
+}
+
+#countries ul li {
+  padding: 6px;
+  width: 25%;
+  /* background-color: aqua; */
+}
+
+#countries ul li .item {
+  width: 100%;
+  text-align: center;
+}
+
+#countries ul li .item img {
+  width: 100%;
+  height: auto;
+}
+
+#countries ul li .item .outline {
+  display: block;
+}
+
+
+
+#countries ul li .item-img:hover .outline {
+  display: none;
+}
+
+#countries ul li .item .color {
+  display: none;
+}
+
+
+#countries ul li .item-img:hover .color {
+  display: block;
+}
+
+#countries ul li .item p {
+  padding: 10px 0;
+  font-family: "Vazirmatn";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+  color: rgba(27, 23, 23, 0.65);
+}
+
+#products h2 {
+  font-family: "Lalezar";
+  font-weight: 400;
+  line-height: 100%;
+  color: rgba(27, 23, 23, 1);
+}
+
+#products span {
+  font-family: "Vazirmatn";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  color: rgba(27, 23, 23, 0.65);
+}
+
+
+#products ul {
+  list-style: none;
+  padding: 0;
+  margin: 35px 0;
+}
+
+
+
+#products ul li .item {
+  text-align: center;
+  width: 100%;
+  padding: 10px;
+}
+
+#products ul li .item img {
+  width: 100%;
+  height: auto;
+}
+
+#products ul li .item .title {
+  margin-top: 15px;
+  font-family: "Vazirmatn";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: rgba(27, 23, 23, 1);
+}
+
+#products ul li .item .dessc {
+  font-family: "Vazirmatn";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+  color: rgba(27, 23, 23, 0.65);
+}
+
+#products .show-all {
+  margin: 10px auto 0 auto;
+  display: block;
+  width: fit-content;
+  color: rgba(27, 23, 23, 0.65);
+  border: 1px rgba(27, 23, 23, 0.65) solid;
+  background-color: rgba(238, 235, 221, 1);
+}
+
+
+/* دسکتاپ */
+@media (width >=1000px) {
+  #hero {
+    display: flex;
+    align-items: center;
+    gap: 70px;
+    /* background-color: blue; */
+  }
+
+  #hero .shoes {
+    box-shadow: inset 15px 30px 60px 0 rgba(0, 0, 0, 0.2);
+  }
+
+  #hero .content {
+    flex-grow: 1;
+  }
+
+  #hero p {
+    width: 85%;
+  }
+
+
+  #hero .contact {
+    display: flex;
+    gap: 10px;
+  }
+
+  #hero .contact-us {
+    order: 2;
+  }
+
+  #hero .online-order {
+    order: 1;
+  }
+
+  #countries {
+    margin: 120px auto 0 auto;
+    text-align: center;
+    width: 50%;
+  }
+
+  #countries ul li .item-img {
+    position: relative;
+    padding: 0 10px;
+  }
+
+  #countries .item-img:not(:last-child)::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 1px;
+    margin-left: -10px;
+    background-color: rgba(27, 23, 23, 0.1);
+  }
+
+
+  #products {
+    margin-top: 120px;
+  }
+
+  #products h2 {
+    font-size: 48px;
+  }
+
+  #products span{
+    display: block;
+    margin-top: 10px;
+  }
+
+  #products ul {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+  }
+
+  #products ul li {
+    width: 25%;
+    margin-bottom: 25px;
+  }
+
+  #products .mod-proucts{
+    display: none;
+  }
+}
+
+/* موبایل */
 @media (width <1000px) and (width >=360px) {
   .container {
     width: 390px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: brown;
+    /* background-color: brown; */
   }
 
+  /* عکس کفش ملی */
   header img {
     margin: 30px auto;
   }
 
+  header .dsc-img {
+    display: none;
+  }
+
+  header .mob-img {
+    display: block;
+  }
+
+
   #hero,
   #countries,
   #products {
-    margin: 40px 24px 0;
-    /* border: 1px solid rgb(255, 0, 149); */
+    margin: 0 24px;
+  }
+
+  #hero .shoes {
+    display: none;
   }
 
   #hero .customers {
-    position: relative;
-    padding-top: 2%;
-    /* background-color: rgb(184, 201, 30); */
-
-  }
-
-  #hero .customers img {
-    border-radius: 50%;
-    border: 1px grey solid;
-  }
-
-  #hero .customers .customer-count {
-    margin-right: 22%;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 100%
-  }
-
-  #hero .customers .customer-txt {
-    margin-right: 2%;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 100%;
-    color: rgba(27, 23, 23, 0.65);
+    padding-top: 40px;
   }
 
   #hero h1 {
@@ -99,156 +409,24 @@ img {
     font-weight: 400;
     font-size: 48px;
     line-height: 48px;
-    /* background-color: rgb(81, 20, 194); */
-  }
-
-  #hero p {
-    padding: 0;
-    margin: 10px 0 0;
-    font-family: "Vazirmatn";
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 100%;
-    color: rgba(27, 23, 23, 0.65);
-    /* background-color: rgb(20, 194, 49); */
   }
 
   #hero .contact {
-    /* flex-direction: column;
-    justify-content: center;
-    align-items: center; */
     text-align: center
-    /* background-color: rgb(231, 8, 45); */
-  }
-
-  a {
-    font-family: "Vazirmatn";
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 100%;
-    border-radius: 35px;
-    padding: 8px 32px;
-    text-decoration: none;
-  }
-
-
-  #hero .contact-us {
-    display: inline-block;
-    margin-top: 10px;
-    color: rgba(27, 23, 23, 0.65);
-    border: 1px rgba(27, 23, 23, 0.65) solid;
-    background-color: rgba(238, 235, 221, 1);
-  }
-
-  #hero .contact-us:hover {
-    color: rgba(27, 23, 23, 1);
-    border: 1px rgba(27, 23, 23, 1) solid;
-    background-color: rgba(238, 235, 221, 1);
-  }
-
-  #hero .online-order {
-    display: inline-flex;
-    gap: 10px;
-    margin-top: 10px;
-    color: rgba(238, 235, 221, 1);
-    border: 1px rgba(206, 18, 18, 1) solid;
-    background-color: rgba(206, 18, 18, 1);
-  }
-
-  #hero .online-order:hover {
-    color: rgba(238, 235, 221, 1);
-    border: 1px rgba(129, 0, 0, 1) solid;
-    background-color: rgba(129, 0, 0, 1);
-    fill: #fce57e;
-  }
-
-  #hero .online-order img {
-    filter: brightness(0) saturate(100%) invert(87%) sepia(8%) saturate(274%) hue-rotate(352deg) brightness(95%) contrast(90%);
   }
 
   #countries {
     margin-top: 60px;
   }
 
-  #countries p {
-    font-family: "Vazirmatn";
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 100%;
-    color: rgba(27, 23, 23, 1);
-  }
-
-  #countries ul {
-    list-style: none;
-    padding: 0;
-  }
-
-  #countries ul li {
-    padding: 6px;
-    width: 25%;
-  }
-
-  #countries ul li .item {
-    text-align: center;
-    width: 100%;
-    /* background-color: rgb(236, 132, 172); */
-  }
-
-  #countries ul li .item img {
-    width: 100%;
-    height: auto;
-  }
-
-  #countries ul li .item .outline {
-    display: block;
-  }
-
-  #countries ul li .item-img:hover .outline {
-    display: none;
-  }
-
-  #countries ul li .item .color {
-    display: none;
-  }
-
-
-  #countries ul li .item-img:hover .color {
-    display: block;
-  }
-
-  #countries ul li .item p {
-    padding: 10px 0;
-    font-family: "Vazirmatn";
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 100%;
-    color: rgba(27, 23, 23, 0.65);
-  }
-
   #products {
     margin-top: 60px;
   }
 
+
+
   #products h2 {
-    font-family: "Lalezar";
-    font-weight: 400;
     font-size: 36px;
-    line-height: 100%;
-    color: rgba(27, 23, 23, 1);
-  }
-
-  #products p {
-    font-family: "Vazirmatn";
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 100%;
-    color: rgba(27, 23, 23, 0.65);
-  }
-
-  #products ul {
-    list-style: none;
-    padding: 0;
-    margin: 35px 0;
   }
 
   #products ul li {
@@ -256,41 +434,11 @@ img {
     margin-bottom: 25px;
   }
 
-  #products ul li .item {
-    text-align: center;
-    width: 100%;
+  #products .products-hidden{
+    display: none;
   }
 
-  #products ul li .item img {
-    width: 100%;
-    height: auto;
+  #products .dsc-proucts{
+    display: none;
   }
-
-  #products ul li .item .title {
-    margin-top: 15px;
-    font-family: "Vazirmatn";
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 100%;
-    color: rgba(27, 23, 23, 1);
-  }
-
-  #products ul li .item .dessc {
-    font-family: "Vazirmatn";
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 100%;
-    color: rgba(27, 23, 23, 0.65);
-  }
-
-  #products .show-all {
-    margin: 10px auto 0 auto;
-    display: block;
-    width: fit-content;
-    color: rgba(27, 23, 23, 0.65);
-    border: 1px rgba(27, 23, 23, 0.65) solid;
-    background-color: rgba(238, 235, 221, 1);
-  }
-
-
 }
